--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -51,6 +51,10 @@
         height: 800px;
     }
 
+     .first {
+        background-image: url(../images/girl-air.jpg);
+        background-position: 50% 0;
+    }
      .second {
         background-image: url(../images/tom.jpg);
         background-position: 50% 0;
