--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h2,
 
 .item {
   background-size: cover;
-  height: 550px; }
+  height: 568px; }
 
 .first {
   background-image: url(../images/girl-air.jpg);
@@ -105,12 +105,6 @@ li:last-of-type {
 
 .clear {
   clear: both; }
-
-.section-img {
-  width: 100%;
-  margin-top: -10px;
-  margin-bottom: 82px;
-  outline: 1px solid transparent; }
 
 .skew {
   -webkit-transform: skewY(-3deg);
@@ -251,6 +245,30 @@ li:last-of-type {
 
 /* Nav / Navbar Styles end
 ===================================*/
+/* Section Images
+===================================*/
+.prices-section, .location-section {
+  margin-top: -70px; }
+
+.section-img {
+  margin-top: -10px;
+  min-height: 300px; }
+
+.park-img {
+  background: url(../images/park.jpg);
+  background-size: cover;
+  background-position: 55%; }
+
+.store-img {
+  background: url(../images/inside.jpg);
+  background-size: cover;
+  background-position: 35% -60px; }
+
+.outside-img {
+  background: url(../images/mountains.jpg);
+  background-size: cover;
+  background-position: 35% -60px; }
+
 /* About us section
 ===================================*/
 .img-fix {
@@ -279,7 +297,6 @@ li:last-of-type {
 /* Prices section 
 ===================================*/
 .prices-section {
-  margin-top: -100px;
   background: #334d69;
   border: 1px solid #334d69; }
   .prices-section h2 {
@@ -372,8 +389,7 @@ li:last-of-type {
   margin-bottom: 100px; }
 
 .location-section {
-  background: #4c4c4c;
-  margin-top: -100px; }
+  background: #4c4c4c; }
   .location-section h2 {
     padding-bottom: 30px; }
   .location-section a {
@@ -522,7 +538,7 @@ footer {
     font-size: 80px; } }
 @media screen and (min-width: 768px) {
   .prices-section, .location-section, .programs-section {
-    margin-top: -180px; }
+    margin-top: 0px; }
 
   nav .container {
     padding-left: 0;
@@ -582,7 +598,7 @@ footer {
       margin-right: 0%; }
 
   .prices-section {
-    margin-top: -200px; }
+    margin-top: 0px; }
     .prices-section .prices-container {
       margin-bottom: 0; }
     .prices-section .location-section {
@@ -632,6 +648,6 @@ footer {
       margin-right: 0%; }
 
   .prices-section, .location-section, .programs-section {
-    margin-top: -380px; } }
+    margin-top: 0px; } }
 
 /*# sourceMappingURL=style.css.map */
