--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -1,3 +1,4 @@
+
   h2,
     .h2 {
         margin-top: 0px;
@@ -18,14 +19,15 @@
         background-repeat: no-repeat;
     }
     .second {
-        background-image: url(../images/tom.jpg);
+        background-image: url(../images/philip.jpg);
         background-position: 80% ;
     }
-    // .third{
-    //     background-image: url(../images/ramp-air.jpg);
-    //     background-position: 0 0;
-    //         background-repeat: no-repeat;
-    // }
+    .third{
+          
+        background-image: url(../images/float.jpg);
+          background-size: cover;
+             background-position: 80% ;
+    }
     ul {
         padding-left: 0;
         margin-right: 0;
@@ -35,7 +37,7 @@
     }
 
 
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
     .navbar-header {
         float: none;
     }
