--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -1,7 +1,12 @@
 @media (min-width: 480px) {
-    p {
-        font-size: 18px;
+    .prices-section, .location-section, .programs-section {
+        margin-top: -90px;
     }
+    .section-img {
+        margin-top: -20px;
+        min-height: 500px;
+    }
+  
     .embed-container {
         min-height: 300px;
     }
@@ -11,8 +16,9 @@
 }
 
 @media screen and (min-width: 768px) {
-    .prices-section, .location-section, .programs-section {
-        margin-top: 0px;
+    .section-img {
+        margin-top: -30px;
+        min-height: 600px;
     }
     nav {
         .container {
@@ -27,6 +33,13 @@
 }
 
 @media screen and (min-width: 992px) {
+    // .prices-section, .location-section, .programs-section {
+    //     margin-top: -190px;
+     
+    // }
+    .section-img {
+        margin-top: -30px;
+    }
     .container {
         max-width: 80%;
     }
@@ -43,20 +56,18 @@
         h1 {
             font-size: 115px;
             margin-top: 35px;
-
         }
     }
     .item {
         background-size: cover;
-        height: 800px;
+        height: 825px;
     }
-
-     .first {
+    .first {
         background-image: url(../images/girl-air.jpg);
         background-position: 50% 0;
     }
-     .second {
-        background-image: url(../images/tom.jpg);
+    .second {
+        background-image: url(../images/philip.jpg);
         background-position: 50% 0;
     }
     .lefty {
@@ -85,7 +96,6 @@
         }
     }
     .prices-section {
-        margin-top: 0px;
         .prices-container {
             margin-bottom: 0;
         }
@@ -152,6 +162,21 @@
         }
     }
     .prices-section, .location-section, .programs-section {
-        margin-top: 0px;
+        margin-top: -190px;
+       
+    }
+    .section-img {
+        margin-top: -40px;
+        min-height:700px;
     }
 }
+
+
+
+@media screen and (min-width: 1800px) {
+    //   .prices-section, .location-section, .programs-section {
+    //     margin-top: -190px;
+    //     background:gold;
+       
+    // }
+    }
