added mailing letter to info.html/ added third hero img to index.html

--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -19,13 +19,12 @@
         background-repeat: no-repeat;
     }
     .second {
-        background-image: url(../images/philip.jpg);
-        background-position: 80% ;
+        background-image: url(../images/teen-rider.jpg);
+        background-position: 50% ;
     }
     .third{
           
-        background-image: url(../images/float.jpg);
-          background-size: cover;
+        background-image: url(../images/philip.jpg);
              background-position: 80% ;
     }
     ul {
