--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -6,6 +6,7 @@
         margin-top: -20px;
         min-height: 500px;
     }
+
   
     .embed-container {
         min-height: 300px;
@@ -67,7 +68,8 @@
         background-position: 50% 0;
     }
     .second {
-        background-image: url(../images/philip.jpg);
+        background-image: url(../images/teen-rider.jpg);
+        background-position: 80% ;
         background-position: 50% 0;
     }
     .lefty {
