--- a/css/_info.scss
+++ b/css/_info.scss
@@ -35,4 +35,37 @@ h2{
 
 }
 
+form{
+	margin:0 auto;
+	
+	
+}
+
+input {
+
+  font-size: 21px;
+  font-weight: bold;
+  display: block;
+  margin: 20px auto;
+  outline:0;
+  border:0;
+  padding: 10px 10px;
+  font-size: 13px;
+  width: 400px;
+
+
+  box-shadow:inset 0 0 2px rgba(0,0,0,0.5);
+}
+
+.button:hover {
+   border-top-color: #ffffff;
+   background: #ffffff;
+   color: #a7b828;
+   text-shadow: none;
+   cursor: pointer;
+   }
+.button:active {
+   border-top-color: #ffffff;
+   background: #ffffff;
+   }
 
