--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,11 @@ h2,
   background-repeat: no-repeat; }
 
 .second {
-  background-image: url(../images/philip.jpg);
-  background-position: 80%; }
+  background-image: url(../images/teen-rider.jpg);
+  background-position: 50%; }
 
 .third {
-  background-image: url(../images/float.jpg);
-  background-size: cover;
+  background-image: url(../images/philip.jpg);
   background-position: 80%; }
 
 ul {
@@ -98,6 +97,9 @@ li {
 
 /* Main Styling
 ===================================*/
+html {
+  -webkit-font-smoothing: antialiased; }
+
 .container {
   max-width: 90%; }
 
@@ -159,7 +161,6 @@ li:last-of-type {
   display: block;
   padding: 10px;
   text-align: center;
-  border-radius: 0.3em;
   color: black;
   border-bottom: 4px solid rgba(0, 0, 0, 0.5); }
 
@@ -287,7 +288,7 @@ li:last-of-type {
   background-color: #373235;
   margin-top: -50px; }
   .about-section h2 {
-    padding-bottom: 30px; }
+    margin-bottom: 50px; }
 
 .read-btn {
   margin-bottom: 120px; }
@@ -310,7 +311,7 @@ li:last-of-type {
   background: #334d69;
   border: 1px solid #334d69; }
   .prices-section h2 {
-    padding-bottom: 90px; }
+    margin-bottom: 110px; }
 
 .prices-container {
   margin-bottom: 180px; }
@@ -344,7 +345,7 @@ li:last-of-type {
   border: 1px solid #3fa6ad; }
   .rental-section h2 {
     text-align: center;
-    padding-bottom: 90px; }
+    margin-bottom: 110px; }
 
 .rental-bar {
   background: #1e2e41;
@@ -398,15 +399,17 @@ li:last-of-type {
 .location-section {
   background: #4c4c4c; }
   .location-section h2 {
-    padding-bottom: 30px; }
+    margin-bottom: 50px; }
+  .location-section h3:first-of-type {
+    margin-top: 40px; }
   .location-section a {
     color: white;
-    font-size: 20px;
+    font-size: 22px;
     text-align: center;
-    display: block; }
+    display: block;
+    text-decoration: underline; }
     .location-section a:last-of-type {
-      margin-bottom: 40px;
-      text-decoration: underline; }
+      margin-bottom: 40px; }
 
 /* Hours Section
 ===================================*
@@ -415,7 +418,7 @@ li:last-of-type {
   background: #96d59e; }
   .hours-section h2 {
     text-align: center;
-    padding-bottom: 80px; }
+    margin-bottom: 110px; }
   .hours-section .hours-bar {
     background: #1e2e41;
     height: 30px; }
@@ -444,12 +447,14 @@ li:last-of-type {
   .programs-section h2 {
     margin-bottom: 50px; }
   .programs-section .program-marg {
-    margin-bottom: 160px; }
+    margin-bottom: 120px; }
 
 .events-section {
   background: #3fa6ad; }
   .events-section h2 {
-    margin-bottom: 30px; }
+    margin-bottom: 50px; }
+  .events-section h3 {
+    margin-top: 0; }
   .events-section li {
     color: white;
     list-style-type: circle;
@@ -558,6 +563,32 @@ footer {
   .rails-section img {
     margin-bottom: 80px; }
 
+form {
+  margin: 0 auto; }
+
+input {
+  font-size: 21px;
+  font-weight: bold;
+  display: block;
+  margin: 20px auto;
+  outline: 0;
+  border: 0;
+  padding: 10px 10px;
+  font-size: 13px;
+  width: 400px;
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5); }
+
+.button:hover {
+  border-top-color: #ffffff;
+  background: #ffffff;
+  color: #a7b828;
+  text-shadow: none;
+  cursor: pointer; }
+
+.button:active {
+  border-top-color: #ffffff;
+  background: #ffffff; }
+
 @media (min-width: 480px) {
   .prices-section, .location-section, .programs-section {
     margin-top: -90px; }
@@ -611,7 +642,8 @@ footer {
     background-position: 50% 0; }
 
   .second {
-    background-image: url(../images/philip.jpg);
+    background-image: url(../images/teen-rider.jpg);
+    background-position: 80%;
     background-position: 50% 0; }
 
   .lefty {
