--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,12 @@ li {
 html {
   -webkit-font-smoothing: antialiased; }
 
+.col-sm-4 {
+  width: 32%;
+  margin-right: 1%; }
+  .col-sm-4:last-of-type {
+    margin-right: 0; }
+
 .container {
   max-width: 90%; }
 
@@ -588,6 +594,9 @@ input {
 .button:active {
   border-top-color: #ffffff;
   background: #ffffff; }
+
+.lessons-hero {
+  background: url(../images/red-air.jpg); }
 
 @media (min-width: 480px) {
   .prices-section, .location-section, .programs-section {
