--- a/css/style.scss
+++ b/css/style.scss
@@ -14,7 +14,13 @@
 html {
   -webkit-font-smoothing: antialiased;
 }
-
+.col-sm-4{
+    width:32%;
+    margin-right:1%;
+    &:last-of-type{
+        margin-right:0;
+    }
+}
 .container {
     max-width: 90%;
 
