--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -14,6 +14,7 @@
     h2 {
         font-size: 80px;
     }
+   
 }
 
 @media screen and (min-width: 768px) {
@@ -31,6 +32,7 @@
         width: 97.5%;
         margin: 0 auto;
     }
+   
 }
 
 @media screen and (min-width: 992px) {
@@ -38,6 +40,11 @@
     //     margin-top: -190px;
      
     // }
+
+.lessons-contain{
+    width:80%;
+    margin:0 auto;
+}
     .section-img {
         margin-top: -30px;
     }
@@ -153,6 +160,13 @@
     .calender-btn {
         width: 70%;
     }
+      .lessons-section{
+        
+        .col-md-6{
+            padding-right:15px;
+            padding-left:15px;
+        }
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -171,6 +185,7 @@
         margin-top: -40px;
         min-height:700px;
     }
+   
 }
 
 
