--- a/css/_info.scss
+++ b/css/_info.scss
@@ -1,71 +1,62 @@
-.info-hero{
-	background-image: url(../images/two-dudes.jpg);
-	background-position:50%;
+.info-hero {
+    background-image: url(../images/two-dudes.jpg);
+    background-position: 50%;
 }
 
-
-.info-section{
-	margin-top:-50px;
-	background:white;
-	color:black;
-h2{
-	margin-bottom:80px;
-}
-	p,h2,h3{
-		color:black;
-	}
-	h3{
-		margin-top:0;
-	}
-	.history-section{
-		margin-top:80px;
-	}
-}
-
-.rails-section{
-	background:$section-teal;
-	h2{
-		margin-bottom:80px;
-	}
-
-	
-	img{
-		margin-bottom:80px;
-	}
-
+.info-section {
+    margin-top: -50px;
+    background: white;
+    color: black;
+    h2 {
+        margin-bottom: 80px;
+    }
+    p, h2, h3 {
+        color: black;
+    }
+    h3 {
+        margin-top: 0;
+    }
+    .history-section {
+        margin-top: 80px;
+    }
 }
 
-form{
-	margin:0 auto;
-	
-	
+.cable-section {
+    background: $section-teal;
+    h2 {
+        margin-bottom: 80px;
+    }
+    .top-img {
+        &:first-of-type {
+            p {
+                margin-bottom: 120px;
+            }
+        }
+    }
 }
 
 input {
-
-  font-size: 21px;
-  font-weight: bold;
-  display: block;
-  margin: 20px auto;
-  outline:0;
-  border:0;
-  padding: 10px 10px;
-  font-size: 13px;
-  width: 400px;
-
-
-  box-shadow:inset 0 0 2px rgba(0,0,0,0.5);
+    font-size: 21px;
+    font-weight: bold;
+    display: block;
+    margin: 20px auto;
+    outline: 0;
+    border: 0;
+    padding: 10px 10px;
+    font-size: 13px;
+    width: 100%;
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
 .button:hover {
-   border-top-color: #ffffff;
-   background: #ffffff;
-   color: #a7b828;
-   text-shadow: none;
-   cursor: pointer;
-   }
-.button:active {
-   border-top-color: #ffffff;
-   background: #ffffff;
-   }
+    border-top-color: #ffffff;
+    background: #ffffff;
+    color: #a7b828;
+    text-shadow: none;
+    cursor: pointer;
+}
 
+.button:active {
+    border-top-color: #ffffff;
+    background: #ffffff;
+}
