--- a/css/style.scss
+++ b/css/style.scss
@@ -11,16 +11,29 @@
 /* Main Styling
 ===================================*/
 
+
+
 html {
   -webkit-font-smoothing: antialiased;
 }
-.col-sm-4{
-    width:32%;
-    margin-right:1%;
-    &:last-of-type{
-        margin-right:0;
-    }
+
+body{
+    line-height: 1;
 }
+
+
+p,a{
+   line-height: 1.8;  
+}
+
+
+// .col-sm-4{
+//     width:32%;
+//     margin-right:1%;
+//     &:last-of-type{
+//         margin-right:0;
+//     }
+// }
 .container {
     max-width: 90%;
 
@@ -43,6 +56,7 @@ p{
 li {
     &:last-of-type {
         box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5);
+            
     }
 }
 
@@ -107,15 +121,17 @@ li {
 
 .small-ul {
     font-size: 20px;
+    font-weight:bold;
     display: inline-block;
-    padding-top: 12px;
+    padding:20px 0 15px 0;
+  
 }
 
 .big-ul {
     font-size: 40px;
-    margin-top: -55px;
+   padding-bottom:20px;
     display: inline-block;
-    margin-top: -5px;
+    
 }
 
 
@@ -123,8 +139,8 @@ li {
 ====================================================*/
 
 .all-padding {
-    padding-top: 140px;
-    padding-bottom: 140px;
+    padding-top: 160px;
+    padding-bottom: 160px;
 }
 
 /* Carousel Styling
@@ -281,6 +297,9 @@ li {
     margin-bottom: 120px;
 }
 
+
+
+
 /* About us section ends
 ===================================*/
 
@@ -337,7 +356,7 @@ li {
     }
     li {
         text-align: center;
-        background: #ebebeb;
+        background-color: #eee;
         margin-bottom: 4px;
     }
 }
@@ -380,7 +399,10 @@ li {
 }
 
 .rental-prices {
-    background: #F1F1F1;
+            background-color: #eee;
+   
+
+    
     text-align: center;
     margin-bottom: 4px;
 }
@@ -476,7 +498,7 @@ li {
         }
     }
     .hours-prices {
-        background: #F1F1F1;
+       background-color: #eee;
         text-align: center;
         margin-bottom: 4px;
     }
@@ -513,6 +535,8 @@ li {
         color: white;
         list-style-type: circle;
         font-weight: 300;
+        font-size:17px;
+        line-height:1.6;
         &:last-of-type {
             box-shadow: none;
         }
@@ -562,6 +586,7 @@ footer {
 .navbar-scroll {
     background: white;
     padding: 20px 0 10px 0;
+       box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.2);
     // box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
     transition-duration: 0.1s;
 #navbar{
@@ -592,6 +617,8 @@ footer {
     }
 
 }
+
+
 
 @import "firsttime";
 @import "info";
