--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,12 @@ li:last-of-type {
     font-family: 'Pacifico', cursive;
     display: inline-block;
     margin-top: 10px;
+    -webkit-transform: rotate(-10deg);
+    /* Ch <36, Saf 5.1+, iOS, An =<4.4.4 */
+    -ms-transform: rotate(-10deg);
+    /* IE 9 */
     transform: rotate(-10deg);
+    /* IE 10, Fx 16+, Op 12.1+ */
     color: #faba56;
     text-shadow: 2px 2px rgba(0, 0, 0, 0.5); }
   .logo p {
@@ -465,8 +470,6 @@ li:last-of-type {
   background: #3fa6ad; }
   .events-section h2 {
     margin-bottom: 50px; }
-  .events-section h3 {
-    margin-top: 0; }
   .events-section li {
     color: white;
     list-style-type: circle;
@@ -511,7 +514,7 @@ footer {
 .navbar-scroll {
   background: white;
   padding: 20px 0 10px 0;
-  box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5);
   transition-duration: 0.1s; }
   .navbar-scroll #navbar li a {
     color: black; }
@@ -626,30 +629,28 @@ input {
   .lessons-price-section li:first-of-type {
     padding-top: 50px; }
 
-.lessons-price-container {
-  margin-bottom: 180px; }
-  .lessons-price-container:last-child {
-    margin-bottom: 0; }
-  .lessons-price-container li:first-of-type {
-    background: #9fa9b2; }
-  .lessons-price-container .prices-bar {
-    background: #1e2e41;
-    height: 30px; }
-  .lessons-price-container .prices-circle {
-    margin: 0 auto;
-    position: relative;
-    bottom: 60px;
-    width: 80px;
-    height: 80px;
-    background-color: #faba56;
-    background-image: url("../images/ticket2.png");
-    background-repeat: no-repeat;
-    background-position: 16px 16px;
-    border-radius: 40px; }
-  .lessons-price-container li {
-    text-align: center;
-    background: #ebebeb;
-    margin-bottom: 4px; }
+.lessons-price-container:last-child {
+  margin-bottom: 0; }
+.lessons-price-container li:first-of-type {
+  background: #9fa9b2; }
+.lessons-price-container .prices-bar {
+  background: #1e2e41;
+  height: 30px; }
+.lessons-price-container .prices-circle {
+  margin: 0 auto;
+  position: relative;
+  bottom: 60px;
+  width: 80px;
+  height: 80px;
+  background-color: #faba56;
+  background-image: url("../images/ticket2.png");
+  background-repeat: no-repeat;
+  background-position: 16px 16px;
+  border-radius: 40px; }
+.lessons-price-container li {
+  text-align: center;
+  background: #ebebeb;
+  margin-bottom: 4px; }
 
 @media (min-width: 480px) {
   .prices-section, .location-section, .programs-section {
