--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -3,7 +3,9 @@ h2,
     margin-top: 0px;
     margin-bottom: 0px;
 }
-
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border:none;
+}
 .prices-section, .hours-section, .rental-section {
     .col-md-4, .col-md-6 {
         padding-right: 0;
@@ -13,7 +15,7 @@ h2,
 
 .item {
     background-size: cover;
-    height: 568px;
+    height: 668px;
 }
 
 .first {
