--- a/css/style.scss
+++ b/css/style.scss
@@ -26,6 +26,12 @@ p,a{
    line-height: 1.8;  
 }
 
+.menu{
+    font-size:20px;
+    
+    font-weight:bold;
+    background:transparent;
+}
 
 // .col-sm-4{
 //     width:32%;
@@ -152,7 +158,10 @@ li {
 /* Nav / Navbar Styles
 ===================================*/
 .navbar-default .navbar-toggle {
-    border-color: white;
+    border:2px solid white;
+    margin-right:0;
+    
+background:none;
 }
 
 .navbar {
@@ -212,6 +221,8 @@ li {
 .navbar-toggle,
 .navbar-default .navbar-toggle:focus,
 .navbar-default .navbar-toggle:hover {
+    background:transparent;
+    color:white;
 
 
 }
@@ -584,11 +595,16 @@ footer {
 /* jQuery Styles
 ===================================*/
 .navbar-scroll {
+
     background: white;
     padding: 20px 0 10px 0;
         box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5);
     // box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
     transition-duration: 0.1s;
+ .navbar-toggle {
+    border-color:black;
+
+    }
 #navbar{
     li{
         a{
@@ -614,9 +630,22 @@ footer {
 
 
 
+
     }
 
+
+    .menu{
+    
+    color:black;
+
+
+  
+ 
 }
+
+
+}
+
 
 
 
